<resources>
    <string name="app_name">Tap It</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="username_ico">username_ico</string>
    <string name="password">Password</string>
    <string name="password_ico">password_ico</string>
    <string name="or_right_bar">or_right_bar</string>
    <string name="xxxx">XXXX</string>
    <string name="lvl_1">Lvl 1</string>
    <string name="guest">Guest</string>
    <string name="game_pin">Game Pin</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_ico">email_ico</string>
    <string name="email">Email</string>
    <string name="_00_00">00:00</string>
    <string name="_0">0</string>
    <string name="_0lvl">0%</string>
    <string name="tap_circle">tap_circle</string>
</resources>
